...
        modifier = Modifier
            .clip(RoundedCornerShape(10.dp))
            .fillMaxWidth()
            .background(color = MaterialTheme.colorScheme.primary)
            .padding(10.dp)
            .noRippleClick(onClick = onNextClick)
            .testTag("tripTypeNextBtn")
    )
}

@Composable
fun TripTypeItem(
    index: Int,
...
                    } else {
                        MaterialTheme.colorScheme.surfaceContainer
                    }
                )
                .padding(horizontal = 10.dp, vertical = 8.dp)
                .noRippleClick { onClick(0) }
                .testTag("domestic")
        )

        Text(
            text = stringResource(R.string.trip_abroad),
            style = MyStoryTheme.typography.labelLargeBold,
            color = if (!isDomestic) {
...
                    } else {
                        MaterialTheme.colorScheme.surfaceContainer
                    }
                )
                .padding(horizontal = 10.dp, vertical = 8.dp)
                .noRippleClick { onClick(1) }
                .testTag("abroad")
        )
    }
}

@Composable
fun TripPlaceBottom(
...
            modifier = Modifier
                .clip(RoundedCornerShape(10.dp))
                .fillMaxWidth()
                .background(color = backgroundColor)
                .padding(10.dp)
                .noRippleClick(onClick = onNextClick)
                .testTag("tripPlaceNextBtn")
        )
    }
}

@Composable
private fun DomesticPlaces(
...
